--- a/mt-starter-theme/views/archive.twig
+++ b/mt-starter-theme/views/archive.twig
@@ -4,8 +4,8 @@
 	<h2>{{ foo }}</h2>
 	<p>{{ qux }}</p>
 	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+		{% include ['partial/archive/tease-'~post.post_type~'.twig', 'partial/archive/tease.twig'] %}
 	{% endfor %}
 	
-	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+	{% include 'partial/common/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
 {% endblock %}
