--- a/mt-starter-theme/views/partial/single/comment.twig
+++ b/mt-starter-theme/views/partial/single/comment.twig
@@ -8,12 +8,12 @@
 			<h4> replies </h4>
 			<div class="comments">
 				{% for cmt in comment.children %}
-					{% include "comment.twig" with {comment:cmt} %}
+					{% include "partial/common/comment.twig" with {comment:cmt} %}
 				{% endfor %}
 			</div>
 		{% endif %}
 
 		<!-- comment form -->
-		{% include "comment-form.twig" %}
+		{% include "partial/common/comment-form.twig" %}
 	</section>
 </div>
