--- a/mt-starter-theme/views/single.twig
+++ b/mt-starter-theme/views/single.twig
@@ -21,7 +21,7 @@
 				    {% if post.comments %}
 					<h3> comments </h3>
 					{% for cmt in post.comments %}
-					    {% include "comment.twig" with {comment:cmt} %}
+					    {% include "partial/common/comment.twig" with {comment:cmt} %}
 					{% endfor %}
 				    {% endif %}
 				</div>
@@ -30,7 +30,7 @@
 					<p> comments for this post are closed </p>
 				{% else %}
 				    <!-- comment form -->
-				    {% include "comment-form.twig" %}
+				    {% include "partial/common/comment-form.twig" %}
 				{% endif %}
 			</section>
 		</article>
