--- a/mt-starter-theme/views/partial/header/header.twig
+++ b/mt-starter-theme/views/partial/header/header.twig
@@ -6,6 +6,7 @@
             </h1>
             <nav id="nav-main" class="nav-main" role="navigation">
                 {% include "partial/header/menu.twig" with {'menu': menuHeader.get_items} %}
+                {{ function('get_search_form') }}
             </nav><!-- #nav -->
         </div>
     {% endblock %}
