Ajout structure SASS

--- a/wp-content/themes/mt-starter-theme/views/partial/header/header.twig
+++ b/wp-content/themes/mt-starter-theme/views/partial/header/header.twig
@@ -1,4 +1,4 @@
-<header class="header" >
+<header id="header">
     {% block header %}
         <div class="wrapper">
             <h1 class="hdr-logo" role="banner">
