--- a/wp-content/themes/mt-starter-theme/_dev/css/theme.scss
+++ b/wp-content/themes/mt-starter-theme/_dev/css/theme.scss
@@ -1,1 +1,11 @@
 @import 'fonts';
+@import 'var/fonts';
+@import 'var/breakpoints';
+@import 'var/colors';
+@import 'var/typo';
+@import 'mixin/common';
+@import 'mixin/media-query';
+@import 'partial/header/header';
+@import 'partial/footer/footer';
+@import 'partial/common/common';
+@import 'partial/common/layout';
