responsive breakpoints for big screens

--- a/wp-content/themes/starter-theme/_dev/css/var/_breakpoints.scss
+++ b/wp-content/themes/starter-theme/_dev/css/var/_breakpoints.scss
@@ -6,3 +6,9 @@ $lg-down: 991px;
 $lg-up: 992px;
 $xl-down: 1199px;
 $xl-up: 1200px;
+$xxl-down: 1599px;
+$xxl-up: 1600px;
+$xxxl-down: 2500px;
+$xxxl-up: 2500px;
+$tv4k-down: 3500px;
+$tv4k-up: 3500px;
