--- a/wp-content/themes/starter-theme/_dev/css/mixin/_media-query.scss
+++ b/wp-content/themes/starter-theme/_dev/css/mixin/_media-query.scss
@@ -8,8 +8,28 @@
     @content;
   }
 }
-@mixin mediaquery-desktop {
+@mixin mediaquery-laptop {
   @media (min-width: $lg-up) {
+    @content;
+  }
+}
+@mixin mediaquery-desktop {
+  @media (min-width: $xl-up) {
+    @content;
+  }
+}
+@mixin mediaquery-xxl {
+  @media (min-width: $xxl-up) {
+    @content;
+  }
+}
+@mixin mediaquery-xxxl {
+  @media (min-width: $xxxl-up) {
+    @content;
+  }
+}
+@mixin tv4k {
+  @media (min-width: $tv4k-up) {
     @content;
   }
 }
