--- a/wp-content/themes/starter-theme/_dev/css/mixin/_media-query.scss
+++ b/wp-content/themes/starter-theme/_dev/css/mixin/_media-query.scss
@@ -13,6 +13,11 @@
     @content;
   }
 }
+@mixin mediaquery-mobile-tablette {
+  @media (max-width: $lg-down) {
+    @content;
+  }
+}
 @mixin mediaquery-laptop {
   @media (min-width: $lg-up) {
     @content;
