--- a/wp-content/themes/starter-theme/_dev/css/theme.scss
+++ b/wp-content/themes/starter-theme/_dev/css/theme.scss
@@ -12,6 +12,7 @@
 @import 'partial/common/layout';
 @import 'partial/common/util';
 @import 'partial/common/typo';
+@import 'partial/common/wp-images';
 
 @import 'partial/header/header';
 
