--- a/wp-content/themes/starter-theme/templates/partial/header/menu.twig
+++ b/wp-content/themes/starter-theme/templates/partial/header/menu.twig
@@ -1,10 +1,10 @@
 {% if menu %}
-	<ul>
-	{% for item in menu %}
-		<li class="{{ item.classes | join(' ') }}">
-			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
-			{% include "partial/header/menu.twig" with {'menu': item.get_children} %}
-		</li>
-	{% endfor %}
+	<ul class="level-{{ level }}">
+		{% for item in menu %}
+			<li class="{{ item.classes | join(' ') }}">
+				<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
+				{% include "partial/header/menu.twig" with {'menu': item.get_children, 'level': level + 1} %}
+			</li>
+		{% endfor %}
 	</ul>
 {% endif %}
